k8-specs/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8app-backend
spec:
  selector:
    matchLabels:
      app: k8app-backend
  template:
    metadata:
      labels:
        app: k8app-backend
    spec:
      containers:
      - name: k8app-backend
        image: nader2929/sc_course:k8app-backend-image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
