k8-specs/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8app-frontend
spec:
  selector:
    matchLabels:
      app: k8app-frontend
  template:
    metadata:
      labels:
        app: k8app-frontend
    spec:
      containers:
      - name: k8app-frontend
        image: k8app-frontend-image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
