k8-specs/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8app-backend
spec:
  selector:
    app: k8app-backend
  ports:
  - port: 3000
    name: http
    targetPort: 80
  - port: 4000
    name: https
    targetPort: 443
  type: LoadBalancer
