k8-specs/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8app-frontend
spec:
  selector:
    app: k8app-frontend
  ports:
  - port: 3001
    targetPort: 80
