k8-specs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8app-ingress
  labels:
    name: k8app-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: k8app-frontend.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: k8app-frontend
            port: 
              number: 80
