k8-specs/k8app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8app-ingress
  annotations:
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - k8app.com
    - k8app.backend.com
    secretName: frontend-tls-secret
  rules:
  - host: k8app.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: k8app-frontend
            port:
              number: 3001
  - host: k8app.backend.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: k8app-backend
            port:
              number: 3000
